fix: fix for ruby and underline overlap in scope of vertical writing mode

--- a/scss/inc/_base.scss
+++ b/scss/inc/_base.scss
@@ -559,6 +559,7 @@ body {
     .txt-wavy {
         @include writing-mode-vertical-rl {
             text-underline-position: right;
+            text-underline-offset: .75rem;
         }
         @include writing-mode-horizontal-tb {
             text-underline-position: auto;
